SearchRequest record -> class 전환에 따른 getter 변경으로 인한 수정